--- a/app/src/main/res/layout/tree_node_resource_dir.xml
+++ b/app/src/main/res/layout/tree_node_resource_dir.xml
@@ -6,16 +6,17 @@
     android:layout_height="wrap_content"
     android:foreground="?android:attr/selectableItemBackground"
     android:orientation="horizontal"
-    android:background="@color/colorPrimary"
+    android:background="@color/colorPrimaryDark"
     android:padding="5dp">
 
     <TextView
+        android:textStyle="bold"
         android:id="@+id/resource_dir_txt"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         tools:text="Directory Name"
-        android:textColor="@color/sakai_light_black"
+        android:textColor="@color/sakai_medium_silver"
         android:textSize="20sp" />
 
 </LinearLayout>
