--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.sakaimobile.development.sakaiclient20.ui.MainActivity">
+    tools:context="com.sakaimobile.development.sakaiclient20.ui.activities.MainActivity">
 
 
     <android.support.v7.widget.Toolbar
