--- a/app/src/main/res/layout/activity_web_view.xml
+++ b/app/src/main/res/layout/activity_web_view.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.sakaimobile.development.sakaiclient20.ui.WebViewActivity">
+    tools:context="com.sakaimobile.development.sakaiclient20.ui.activities.WebViewActivity">
 
 
     <android.support.v7.widget.Toolbar
