--- a/app/src/main/res/layout/activity_web_view.xml
+++ b/app/src/main/res/layout/activity_web_view.xml
@@ -8,6 +8,7 @@
 
 
     <android.support.v7.widget.Toolbar
+        android:background="@color/colorPrimary"
         android:id="@+id/webview_toolbar"
         android:layout_width="match_parent"
         android:layout_height="50dp"
