--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
 
     <dimen name="term_header_height">28dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
