--- a/app/src/main/res/layout/activity_web_view.xml
+++ b/app/src/main/res/layout/activity_web_view.xml
@@ -10,6 +10,7 @@
     <android.support.v7.widget.Toolbar
         android:background="@color/colorPrimary"
         android:id="@+id/webview_toolbar"
+        app:titleTextColor="@color/white"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:text="@string/app_name"
