--- a/app/src/main/res/layout/card_announcements.xml
+++ b/app/src/main/res/layout/card_announcements.xml
@@ -19,11 +19,13 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:orientation="horizontal"
-            android:layout_weight="2">
+            android:layout_weight="1.1"
+            android:paddingTop="2.3dp"
+            android:background="@color/colorPrimary"
+            android:orientation="horizontal">
 
             <TextView
-                android:paddingTop="7dp"
+                android:paddingTop="2dp"
                 android:id="@+id/course_icon"
                 style="@style/CourseIcons"
                 android:layout_width="50dp"
@@ -56,6 +58,7 @@
             android:layout_height="0dp"
             android:layout_weight="1.3"
             android:paddingLeft="10dp"
+            android:paddingTop="10dp"
             >
 
             <TextView
