--- a/app/src/main/res/menu/assignments_fragment_menu.xml
+++ b/app/src/main/res/menu/assignments_fragment_menu.xml
@@ -23,4 +23,11 @@
            </group>
        </menu>
     </item>
+    <item
+        android:title="Refresh"
+        android:id="@+id/action_refresh"
+        android:icon="@drawable/ic_home_black_24dp"
+        app:showAsAction="always">
+
+    </item>
 </menu>
