--- a/app/src/main/res/menu/toolbar_nav_activity.xml
+++ b/app/src/main/res/menu/toolbar_nav_activity.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_settings"
-        android:icon="@drawable/ic_settings_icon"
-        android:title="@string/title_settings"
+        android:id="@+id/action_logout"
+        android:icon="@drawable/ic_logout_24dp"
+        android:title="Logout"
         app:showAsAction="ifRoom"/>
 
 
